--- a/src/components/hero-section.scss
+++ b/src/components/hero-section.scss
@@ -207,6 +207,19 @@
   }
 }
 
+/** 
+ * Very large layout
+ */
+@media screen and (min-width: 1400px) {
+  #intro-hero {
+    .content {
+      h1 {
+        font-size: 5em;
+      }
+    }
+  }
+}
+
 /**
  * Small + Medium layout
  */
@@ -281,7 +294,7 @@
  * Tiny layout
  */
 
-@media only screen and (min-width: 0) and (max-width: 360px) {
+@media only screen and (min-width: 0) and (max-width: 375px) {
   #intro-hero {
     div.logo-wrapper {
       svg.logo {
