--- a/src/components/video-section.scss
+++ b/src/components/video-section.scss
@@ -97,6 +97,11 @@
 
 @media only screen and (min-width: 0) and (max-width: 600px) {
   #intro .video-section {
+    .box {
+      margin-left: -2em;
+      margin-right: -2em;
+    }
+
     .top .content .block .headline.jumbo {
       font-size: 1.8em;
     }
